fixed winner page spacing

--- a/frontend/src/components/winner/component.module.css
+++ b/frontend/src/components/winner/component.module.css
@@ -1,10 +1,16 @@
+.winner-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12%;
+}
+
 .container {
   background-color: #ffffff;
-  padding: 20px 15px;
   border-radius: 12px;
-  box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-  width: 100%;
-  max-width: 600px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+  width: fit-content;
+  padding: 10px;
 }
 
 .title {
@@ -37,6 +43,12 @@
   border: 1px solid #cfd8e3;
   border-radius: 10px;
   position: relative;
+  transition: all 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 12px rgba(1, 80, 137, 0.139);
 }
 
 .avatar {
@@ -73,10 +85,10 @@
   color: #2563eb;
   background-color: rgb(255, 255, 255);
   text-transform: capitalize;
-  border: 1px solid #AEAEAE; 
+  border: 1px solid #aeaeae;
   white-space: nowrap;
 }
-      
+
 .votes {
   display: flex;
   align-items: center;
@@ -99,7 +111,7 @@
   font-size: 13px;
   color: #004375;
   margin-left: 79px;
-  padding-left: 10px; 
+  padding-left: 10px;
 }
 
 .progress-bar {
@@ -110,53 +122,52 @@
   overflow: hidden;
 }
 
-
 @media (min-width: 768px) {
   .container {
     padding: 40px;
   }
-  
+
   .title {
     font-size: 2rem;
   }
-  
+
   .subtitle {
     font-size: 1rem;
     margin-bottom: 30px;
   }
-  
+
   .cards {
     gap: 20px;
   }
-  
+
   .card {
     padding: 12px 20px;
   }
-  
+
   .avatar {
     width: 50px;
     height: 50px;
     margin-right: 15px;
   }
-  
+
   .name {
     font-size: 1rem;
   }
-  
+
   .role {
     font-size: 11px;
     padding: 2px 10px;
   }
-  
+
   .vote-count {
     font-size: 0.75rem;
   }
-  
+
   .vote-icon {
     width: 24px;
     height: 24px;
   }
-  
+
   .percent {
     font-size: 14px;
     margin-left: 250px;
@@ -167,24 +178,24 @@
   .container {
     padding: 20px 15px;
   }
-  
+
   .title {
     font-size: 1.3rem;
   }
-  
+
   .subtitle {
     font-size: 0.85rem;
   }
-  
+
   .avatar {
     width: 40px;
     height: 40px;
   }
-  
+
   .name {
     font-size: 0.9rem;
   }
-  
+
   .percent {
     font-size: 12px;
     margin-left: 250px;
